Fix spacing in Speakers

--- a/src/components/ToTop/ToTop.sass
+++ b/src/components/ToTop/ToTop.sass
@@ -7,7 +7,7 @@
   position: fixed
   right: 1rem
   bottom: 1rem
-  z-index: 12
+  z-index: 9
   transition: opacity 0.8s
 
 .to-top-btn:hover
