--- a/src/views/Speakers/Speakers.sass
+++ b/src/views/Speakers/Speakers.sass
@@ -2,6 +2,7 @@
 
 .speakers
   width: 100%
+  padding-bottom: 2.618rem
 
 .speakers__grid
   display: flex
